--- a/build.gradle
+++ b/build.gradle
@@ -25,21 +25,17 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
     testImplementation 'com.github.javafaker:javafaker:1.0.2'
-    implementation 'com.github.javafaker:javafaker:1.0.2'
     testImplementation 'mysql:mysql-connector-java:8.0.32'
     testImplementation 'org.postgresql:postgresql:42.1.4'
     testImplementation 'commons-dbutils:commons-dbutils:1.7'
     testImplementation 'com.codeborne:selenide:6.13.0'
-    implementation 'com.codeborne:selenide:6.13.0'
     testImplementation 'io.qameta.allure:allure-selenide:2.20.1'
-    testImplementation 'io.rest-assured:rest-assured:4.4.0'
-    testImplementation 'io.rest-assured:json-schema-validator:4.4.0'
-    testImplementation 'com.google.code.gson:gson:2.10.1'
-
 }
 
 test {
     useJUnitPlatform()
     systemProperty 'selenide.headless', System.getProperty('selenide.headless')
     systemProperty 'db.url', System.getProperty('db.url')
+    systemProperty 'db.user', System.getProperty('db.user', "app")
+    systemProperty 'db.password', System.getProperty('db.password', "pass")
 }
